# flight_safety

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: diagnosis.yaml  monitor.yaml  monitors.yaml  recorder.yaml  response.yaml  touchdown.yaml
docs/: flight_safety_architecture.md
include/flight_safety/: stream_diagnostic.h
launch/: diagnosis.launch  estimation_mux.launch  monitor.launch  monitoring.launch  observe.launch  recorder.launch  response.launch  safety.launch  touchdown.launch  vision_pose_mux.launch
msg/: Fault.msg  FlightState.msg
scripts/: diagnosis_node.py  monitor_node.py  recorder_node.py  response_node.py  safety_node.py  touchdown_node.py
src/flight_safety/: actions.py  checks.py  consistency.py  control_mux.py  geofence.py  monitor.py  response.py  responses.py  touchdown.py
src/flight_safety/diagnosis/: __init__.py  consistency.py  geofence.py  liveness.py
