<?xml version="1.0"?>
<package format="2">
  <name>flight_safety</name>
  <version>0.0.1</version>
  <description>Flight-safety monitoring: generic topic/ping checks + VRPN vs local_position consistency (observe-only).</description>
  <maintainer email="rhanehdfurrl@gmail.com">hmcl</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
</package>
